footer gap & 404 position (fix)

--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -212,7 +212,15 @@
 
 .policy {
   display: flex;
-  gap: 20px;
+  gap: 6px;
+
+  @media screen and (min-width: 375px) {
+    gap: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    gap: 20px;
+  }
 
   @media screen and (min-width: 1200px) {
     gap: 40px;
