--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -18,7 +18,7 @@
 .background {
   position: absolute;
   top: 60px;
-  right: 15px;
+  right: 0;
   width: 100%;
   height: 320px;
 
@@ -27,13 +27,8 @@
   background-position: center;
   background-image: url("../../public/404.png");
 
-  @media screen and (min-width: 375px) {
-    right: 20px;
-  }
-
   @media screen and (min-width: 768px) {
     top: 0px;
-    right: 0;
     width: 100%;
     height: 680px;
   }
